--- a/nutanix-cfme-tower-ansible-get-info-from-hosts.yml
+++ b/nutanix-cfme-tower-ansible-get-info-from-hosts.yml
@@ -12,10 +12,10 @@
   tasks:
     - name: Get hosts
       uri:
-        url: "{{ base_url }}/hosts"
+        url: "{{ base_url }}/hosts/list"
         validate_certs: no
         force_basic_auth: yes
-        method: GET
+        method: POST
         status_code: 200
         user: "{{ username }}"
         password: "{{ password }}"
