--- a/nutanix-cfme-tower-ansible-get-info-from-hosts.yml
+++ b/nutanix-cfme-tower-ansible-get-info-from-hosts.yml
@@ -27,5 +27,5 @@
       register: hostinfo
 
     - name: Output info
-      debug: msg="DEBUG {{ item.name }}"
-      with_items: "{{ hostinfo.json.entities }}" 
+      debug: 
+        var: hostinfo
