--- a/nutanix-cfme-tower-ansible-create-vm.yml
+++ b/nutanix-cfme-tower-ansible-create-vm.yml
@@ -17,24 +17,30 @@
         password: "{{ password }}"
         return_content: yes
         body: 
-          name: "{{ hostname }}"
-          memoryMb: 1024
-          numVcpus: 1
-          hypervisorType: Acropolis
-          description: "CoreOS Instance {{ etcd_instance }}"
-          vmCustomizationConfig:
-            userdata: "{{ lookup('file', filename) }}" 
-          vmDisks:
-            - isCdrom: false
-              isThinProvisioned: true
-              vmDiskCreate:
-                containerUuid: "a84d4b18-6656-43dd-8ca0-acc98c7cf7fb"
-                sizeMb: 20480
-            - isCdrom: true
-              vmDiskClone:
-                 containerUuid: "5da9f6a9-2b84-46d5-8970-1fb9997752c1"
-                 vmDiskUuid: "ac514e35-1d83-4bde-8da8-1190379e0d83"
-          vmNics:
-            - networkUuid: "205b7475-f572-4330-81d5-a2db4af8bfcf"
-              requestedIpAddress: "{{ inventory_hostname }}"
+          api_version: '3.1.0'
+          metadata:
+            kind: vm
+          spec:
+            cluster_reference:
+              kind: cluster
+              uuid: 00056ae0-7952-1f8a-0000-000000016b6d
+            name: testansible1
+            resources:
+              disk_list:
+              - data_source_reference:
+                  kind: image
+                  uuid: {{ image_uuid }}
+                  name: string
+                disk_size_mib: 0
+                disk_size_bytes: 0
+              nic_list:
+              - ip_endpoint_list:
+                - ip: 192.168.1.100
+                subnet_reference:
+                  kind: subnet
+                  uuid: 59a03db1-209c-4b3a-9ad9-a811380a6e5d
+              num_sockets: 1
+              num_vcpus_per_socket: 1
+              memory_size_mib: 2048
+              power_state: 'ON'
         body_format: json
