--- a/nutanix-cfme-tower-ansible-create-vm.yml
+++ b/nutanix-cfme-tower-ansible-create-vm.yml
@@ -45,14 +45,7 @@
                     #cloud-config
                     debug: True
                     disable_root: True
-                    ssh_pwauth: True
+                    ssh_pwauth: False
                     ssh_authorized_keys:
                     - "{{ ansible_ssh_pub_key }}"
-                    chpasswd:
-                    list: |
-                      cloud-user:"{{ vm_password }}"
-                    expire: False
-                    runcmd:
-                     - sed -i'.orig' -e's/without-password/yes/' /etc/ssh/sshd_config
-                     - service sshd restart
         body_format: json
