--- a/nutanix-cfme-tower-ansible-create-vm.yml
+++ b/nutanix-cfme-tower-ansible-create-vm.yml
@@ -52,6 +52,6 @@
                       expire: false
                     runcmd:
                     - sed -i'.orig' -e's/without-password/yes/' /etc/ssh/sshd_config
-                    - service sshd restart"
+                    - service sshd restart | b64encode"
              
         body_format: json
