--- a/nutanix-cfme-tower-ansible-create-vm.yml
+++ b/nutanix-cfme-tower-ansible-create-vm.yml
@@ -39,4 +39,7 @@
               num_vcpus_per_socket: "{{ num_vcpus_per_socket }}"
               memory_size_mib: "{{ memory_size_mib }}"
               power_state: "{{ power_state }}"
+              guest_customization:
+                cloud_init:
+                  user_data: {{ lookup('template','templates/vm-cloud-init.yml.j2') | b64encode }}
         body_format: json
